--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1823,7 +1823,7 @@ input, select, textarea {
 		-webkit-appearance: none;
 		-ms-appearance: none;
 		appearance: none;
-		background: #f7f7f7;
+		background: #fff;
 		border-radius: 0.35em;
 		border: solid 2px transparent;
 		color: inherit;
