--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2055,7 +2055,7 @@ input, select, textarea {
 			-webkit-transition: opacity 0.2s ease-in-out;
 			-ms-transition: opacity 0.2s ease-in-out;
 			transition: opacity 0.2s ease-in-out;
-			background: url("images/overlay.png");
+			background: url("images/bg.png");
 			border-radius: 0.5em;
 			content: '';
 			display: block;
@@ -2237,7 +2237,7 @@ input, select, textarea {
 			}
 
 			ul.labeled-icons li h3 {
-				color: #b2b2b2;
+				color: #000000;
 				left: 0;
 				position: absolute;
 				text-align: center;
@@ -2451,7 +2451,7 @@ input, select, textarea {
 		transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out, border-color 0.2s ease-in-out;
 		background-color: transparent;
 		border-radius: 0.35em;
-		border: solid 3px #efefef;
+		border: solid 3px #e99ed4;
 		color: #787878 !important;
 		cursor: pointer;
 		display: inline-block;
@@ -2470,7 +2470,7 @@ input, select, textarea {
 		input[type="reset"]:hover,
 		input[type="button"]:hover,
 		.button:hover {
-			border-color: #e99ed4;
+			border-color: #ffff;
 			color: #787878 !important;
 		}
 
@@ -2524,8 +2524,8 @@ input, select, textarea {
 		input[type="button"].primary,
 		.button.primary {
 			background-color: #e99ed4;
-			border-color: #e99ed4;
-			color: #ffffff !important;
+			border-color: #ffffff;
+			color: #e99ed4 !important;
 		}
 
 			input[type="submit"].primary:hover,
@@ -2599,10 +2599,10 @@ input, select, textarea {
 		justify-content: space-between;
 		background-color: #1f1815;
 		background-attachment: scroll,								scroll;
-		background-image: url("images/overlay.png"), url("../../images/bg.jpg");
+		background-image: url("images/bg.jpg"), url("../../images/bg.jpg");
 		background-position: top left,							top left;
 		background-repeat: repeat,								no-repeat;
-		background-size: auto,								150%;
+		background-size: cover,								cover;
 		color: rgba(255, 255, 255, 0.791);
 		height: 100%;
 		left: 0;
@@ -2611,6 +2611,7 @@ input, select, textarea {
 		text-align: right;
 		top: 0;
 		width: 35%;
+		height: 109%;
 	}
 
 		#header > * {
@@ -2642,7 +2643,7 @@ input, select, textarea {
 			font-size: 1.35em;
 			line-height: 1.75em;
 			margin: 0;
-			color: #ccced1;
+			color: #7f7f7f;
 		}
 
 		#header .image.avatar {
@@ -3085,7 +3086,7 @@ input, select, textarea {
 			#footer {
 				background-attachment: scroll;
 				background-color: #1f1815;
-				background-image: url("images/overlay.png"), url("../../images/bg.jpg");
+				background-image: url("images/bg.png"), url("../../images/bg.jpg");
 				background-position: top left,						bottom center;
 				background-repeat: repeat,							no-repeat;
 				background-size: auto,							cover;
